fix: default table cells to start-aligned text in UA stylesheet
Legacy <center> sets text-align:center, which historically centers the table element but not the text inside its cells. Add a UA default of text-align:start for td/th and a regression covering <center><table><td>.

--- a/src/user_agent.css
+++ b/src/user_agent.css
@@ -241,6 +241,7 @@ td, th {
     display: table-cell;
     padding: 1px;
     vertical-align: inherit;
+    text-align: start;
 }
 
 th {
